Fixed grid-- phone gap

--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -33,6 +33,7 @@
     @media(max-width: 500px) {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+      column-gap: 8px;
     }
   }
 
